--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>JS audio</title>
 </head>
 <body>
-    <button id="button1"> BUTTON 1</button>
+    <div id="container">
+        <canvas id="canvas1"></canvas>
+        <audio id="audio1" controls></audio>
+    </div>
 
     <script src="script.js"></script>
 </body>
