Browse audio file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="container">
         <canvas id="canvas1"></canvas>
         <audio id="audio1" controls></audio>
+        <input type = "file" id="fileupload" accept="audio/*"></input>
     </div>
 
     <script src="script.js"></script>
