Testing block added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <div id="container">
         <canvas id="canvas1"></canvas>
-        <audio id="audio1" controls></audio>
+        <!-- <audio id="audio1" controls></audio> -->
+        <audio id="audio1" src="spell.wav" controls></audio>
         <input type = "file" id="fileupload" accept="audio/*"></input>
     </div>
 
