--- a/index.html
+++ b/index.html
@@ -17,10 +17,35 @@
         <button id="button1" type="button">play</button>
 
         <div class="slider">
-            <p>amplification</p>
+            <p>Amplification</p>
             <!-- <input id ="slider1" type="range" min="0.1" max="20" value="3.5" step="0.1"> -->
-            <input id ="slider1" type="range" min="0.1" max="20" value="3.5" step="0.1" oninput="updateValue(this.value, 'sliderValue1')"> 
-            <p id="sliderValue1"></p>
+            <input id ="sliderAmplification" type="range" min="0.1" max="20" value="3.5" step="0.1" oninput="updateValueAmplification(this.value, 'sliderValueAmplification')"> 
+            <p id="sliderValueAmplification">.</p>
+
+            <p>Width</p>
+            <input id ="sliderWidthMultiplier" type="range" min="0.1" max="2" value="1" step="0.1" oninput="updateValueWidthMultiplier(this.value, 'sliderValueWidthMultiplier')"> 
+            <p id="sliderValueWidthMultiplier">.</p>
+
+            <p>High cutoff</p>
+            <input id ="sliderHighCut" type="range" min="0" max="0.99" value="0" step="0.01" oninput="updateValueHighCut(this.value, 'sliderValueHighCut')"> 
+            <p id="sliderValueHighCut">.</p>
+
+            
+
+            <label for="fftSizes">FFT size:</label>
+            <select name="fftSizes" id="droplist" oninput="updateValueFftSize(this.value)">
+                <option value="128">128</option>
+                <option value="32">32</option>
+                <option value="64">64</option>
+                <option value="128">128</option>
+                <option value="256">256</option>
+                <option value="512">512</option>
+                <option value="1024">1024</option>
+                <option value="2048">2048</option>
+                <option value="4096">4096</option>
+                <option value="8192">8192</option>
+            </select>
+
         </div>
 
     </div>
