--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p id="sliderValueAmplification">.</p>
 
             <p>Width</p>
-            <input id ="sliderWidthMultiplier" type="range" min="0.1" max="4" value="1" step="0.1" oninput="updateValueWidthMultiplier(this.value, 'sliderValueWidthMultiplier')"> 
+            <input id ="sliderWidthMultiplier" type="range" min="0.1" max="4" value="1" step="0.01" oninput="updateValueWidthMultiplier(this.value, 'sliderValueWidthMultiplier')"> 
             <p id="sliderValueWidthMultiplier">.</p>
 
             <p>High cutoff</p>
@@ -43,12 +43,17 @@
                 <option value="4096">4096</option>
                 <option value="8192">8192</option>
             </select>
+
             <br>
             <label for="visualizers">Visualizer type:</label>
             <select name="visualizers" id="droplistVisualizers" oninput="updateValueVisualizerType(this.value)">
-                <option value="horizontal bars">horizontal bars</option>
                 <option value="radial bars">Radial bars</option>
+                <option value="horizontal bars">horizontal bars</option>
             </select>
+
+            <p>Turns</p>
+            <input id ="sliderTurns" type="range" min="-10" max="10" value="1" step="0.1" oninput="updateValueTurns(this.value, 'sliderValueTurns')"> 
+            <p id="sliderValueTurns">.</p>   
 
         </div>
 
