--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
             <p>Amplification</p>
             <!-- <input id ="slider1" type="range" min="0.1" max="20" value="3.5" step="0.1"> -->
             <input id ="sliderAmplification" type="range" min="0.1" max="20" value="3.5" step="0.1" oninput="updateValueAmplification(this.value, 'sliderValueAmplification')"> 
-            <p id="sliderValueAmplification">.</p>
+            <p id="sliderValueAmplification">&nbsp;</p>
 
             <p>Width</p>
-            <input id ="sliderWidthMultiplier" type="range" min="0.1" max="4" value="1" step="0.01" oninput="updateValueWidthMultiplier(this.value, 'sliderValueWidthMultiplier')"> 
+            <input id ="sliderWidthMultiplier" type="range" min="0.1" max="10" value="1" step="0.01" oninput="updateValueWidthMultiplier(this.value, 'sliderValueWidthMultiplier')"> 
             <p id="sliderValueWidthMultiplier">.</p>
 
             <p>High cutoff</p>
             <input id ="sliderHighCut" type="range" min="0" max="0.99" value="0" step="0.01" oninput="updateValueHighCut(this.value, 'sliderValueHighCut')"> 
-            <p id="sliderValueHighCut">.</p>           
+            <p id="sliderValueHighCut">.</p>
 
             <label for="fftSizes">FFT size:</label>
             <select name="fftSizes" id="droplistFftSizes" oninput="updateValueFftSize(this.value)">
-                <option value="4096">4096</option>
+                <option value="64">64</option>
                 <option value="32">32</option>
                 <option value="64">64</option>
                 <option value="128">128</option>
@@ -47,9 +47,10 @@
             <br>
             <label for="visualizers">Visualizer type:</label>
             <select name="visualizers" id="droplistVisualizers" oninput="updateValueVisualizerType(this.value)">
+                <option value="polygons">polygons</option>
+                <option value="horizontal bars log">horizontal bars (logarithmic)</option>
                 <option value="radial bars log">radial bars (logarithmic)</option>
                 <option value="horizontal bars">horizontal bars</option>
-                <option value="horizontal bars log">horizontal bars (logarithmic)</option>
                 <option value="radial bars">radial bars</option>
 
             </select>
