--- a/index.html
+++ b/index.html
@@ -17,19 +17,6 @@
         <button id="button1" type="button">play</button>
 
         <div class="slider">
-            <p>Amplification</p>
-            <!-- <input id ="slider1" type="range" min="0.1" max="20" value="3.5" step="0.1"> -->
-            <input id ="sliderAmplification" type="range" min="0.1" max="20" value="3.5" step="0.1" oninput="updateValueAmplification(this.value, 'sliderValueAmplification')"> 
-            <p id="sliderValueAmplification">&nbsp;</p>
-
-            <p>Width</p>
-            <input id ="sliderWidthMultiplier" type="range" min="0.1" max="10" value="1" step="0.01" oninput="updateValueWidthMultiplier(this.value, 'sliderValueWidthMultiplier')"> 
-            <p id="sliderValueWidthMultiplier">.</p>
-
-            <p>High cutoff</p>
-            <input id ="sliderHighCut" type="range" min="0" max="0.99" value="0" step="0.01" oninput="updateValueHighCut(this.value, 'sliderValueHighCut')"> 
-            <p id="sliderValueHighCut">.</p>
-
             <label for="fftSizes">FFT size:</label>
             <select name="fftSizes" id="droplistFftSizes" oninput="updateValueFftSize(this.value)">
                 <option value="64">64</option>
@@ -55,15 +42,45 @@
 
             </select>
 
-            <p>Turns</p>
-            <input id ="sliderTurns" type="range" min="-10" max="10" value="1" step="0.1" oninput="updateValueTurns(this.value, 'sliderValueTurns')"> 
-            <p id="sliderValueTurns">.</p>
+            <!-- NOWE SLIDERY NOWE SLIDERY NOWE SLIDERY-->
 
-            <p>Polygon symmetry</p>
-            <input id ="sliderPolygonSymmetry" type="range" min="2" max="100" value="16" step="1" oninput="updateValuePolygonSymmetry(this.value, 'sliderValuePolygonSymmetry')"> 
-            <p id="sliderValuePolygonSymmetry">.</p>
+            <div class="sliderNew">
+                <p>amplification</p>
+                <input id="amplification" type="range" min="0.1" max="20" value="3.5" step="0.1" data-field="amplification" />
+                <input type="text" value="3.5" data-field="amplification" />
+            </div>
 
-            RED
+            <div class="sliderNew">
+                <p>widthMultiplier</p>
+                <input id="widthMultiplier" type="range" min="0.1" max="10" value="1" step="0.01" data-field="widthMultiplier" />
+                <input type="text" value="1" data-field="widthMultiplier" />
+            </div>
+
+            <div class="sliderNew">
+                <p>highCutoff</p>
+                <input id="highCutoff" type="range" type="range" min="0" max="0.99" value="0" step="0.01" data-field="highCutoff" />
+                <input type="text" value="0" data-field="highCutoff" />
+            </div>
+
+            <div class="sliderNew">
+                <p>turns</p>
+                <input id="turns" type="range" value="1" min="-9" max="9" step="0.01" data-field="turns" />
+                <input type="text" value="1" data-field="turns" />
+            </div>
+
+            <div class="sliderNew">
+                <p>polygonSymmetry</p>
+                <input id="polygonSymmetry" type="range" value="5" min="2" max="100" step="1" data-field="polygonSymmetry" />
+                <input type="text" value="5" data-field="polygonSymmetry" />
+            </div>
+            
+            <p>____________</p>
+            
+
+
+            <!-- NOWE SLIDERY NOWE SLIDERY NOWE SLIDERY-->
+
+            RED lo/hi/re
             <div class="sliderNew">
                 <input type="range" value="0" min="0" max="2" step="0.01" data-field="lowMultiplierRed" />
                 <input type="text" value="0" data-field="lowMultiplierRed" />
@@ -76,7 +93,7 @@
                 <input type="range" value="1" min="0" max="2" step="0.01" data-field="respMultiplierRed" />
                 <input type="text" value="1" data-field="respMultiplierRed" />
             </div>
-            GREEN
+            GREEN lo/hi/re
             <div class="sliderNew">
                 <input type="range" value="0" min="0" max="2" step="0.01" data-field="lowMultiplierGreen" />
                 <input type="text" value="0" data-field="lowMultiplierGreen" />
@@ -89,7 +106,7 @@
                 <input type="range" value="0" min="0" max="2" step="0.01" data-field="respMultiplierGreen" />
                 <input type="text" value="0" data-field="respMultiplierGreen" />
             </div>
-            BLUE
+            BLUE lo/hi/re
             <div class="sliderNew">
                 <input type="range" value="1" min="0" max="2" step="0.01" data-field="lowMultiplierBlue" />
                 <input type="text" value="1" data-field="lowMultiplierBlue" />
