--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
         <input type = "file" id="fileupload" accept="audio/*"></input>
         <button id="button1" type="button">play</button>
 
-        <div class="slider">
+        <div class="barElements">
+            <label for="visualizers">Visualizer type:</label>
+            <select name="visualizers" id="droplistVisualizers" oninput="updateVisualizerType()">
+                <option value="horizontal bars">horizontal bars</option>
+                <option value="polygons">polygons</option>
+                <option value="horizontal bars log">horizontal bars (logarithmic)</option>
+                <option value="radial bars log">radial bars (logarithmic)</option>
+                <option value="radial bars">radial bars</option>
+            </select>
+               
             <label for="fftSizes">FFT size:</label>
             <select name="fftSizes" id="droplistFftSizes" oninput="updateValueFftSize(this.value)">
                 <option value="64">64</option>
@@ -30,45 +39,33 @@
                 <option value="4096">4096</option>
                 <option value="8192">8192</option>
             </select>
-
-            <br>
-            <label for="visualizers">Visualizer type:</label>
-            <select name="visualizers" id="droplistVisualizers" oninput="updateValueVisualizerType(this.value)">
-                <option value="horizontal bars">horizontal bars</option>
-                <option value="polygons">polygons</option>
-                <option value="horizontal bars log">horizontal bars (logarithmic)</option>
-                <option value="radial bars log">radial bars (logarithmic)</option>
-                <option value="radial bars">radial bars</option>
-
-            </select>
-
             <!-- NOWE SLIDERY NOWE SLIDERY NOWE SLIDERY-->
 
-            <div class="sliderNew">
+            <div class="slider">
                 <p>amplification</p>
                 <input id="amplification" type="range" min="0.1" max="20" value="3.5" step="0.1" data-field="amplification" />
                 <input type="text" value="3.5" data-field="amplification" />
             </div>
 
-            <div class="sliderNew">
+            <div class="slider">
                 <p>widthMultiplier</p>
                 <input id="widthMultiplier" type="range" min="0.1" max="10" value="1" step="0.01" data-field="widthMultiplier" />
                 <input type="text" value="1" data-field="widthMultiplier" />
             </div>
 
-            <div class="sliderNew">
+            <div class="slider">
                 <p>highCutoff</p>
                 <input id="highCutoff" type="range" type="range" min="0" max="0.99" value="0" step="0.01" data-field="highCutoff" />
                 <input type="text" value="0" data-field="highCutoff" />
             </div>
 
-            <div class="sliderNew">
+            <div class="slider" id="turnsSliderDiv">
                 <p>turns</p>
                 <input id="turns" type="range" value="1" min="-9" max="9" step="0.01" data-field="turns" />
                 <input type="text" value="1" data-field="turns" />
             </div>
 
-            <div class="sliderNew">
+            <div class="slider" id="polygonSymmetrySliderDiv">
                 <p>polygonSymmetry</p>
                 <input id="polygonSymmetry" type="range" value="5" min="2" max="100" step="1" data-field="polygonSymmetry" />
                 <input type="text" value="5" data-field="polygonSymmetry" />
@@ -80,43 +77,43 @@
 
             <!-- NOWE SLIDERY NOWE SLIDERY NOWE SLIDERY-->
 
-            RED lo/hi/re
-            <div class="sliderNew">
-                <input type="range" value="0" min="0" max="2" step="0.01" data-field="lowMultiplierRed" />
+            RED lo/hi/amp response
+            <div class="slider">
+                <input type="range" value="0" min="0" max="1" step="0.01" data-field="lowMultiplierRed" />
                 <input type="text" value="0" data-field="lowMultiplierRed" />
             </div>
-            <div class="sliderNew">
-                <input type="range" value="0" min="0" max="2" step="0.01" data-field="highMultiplierRed" />
+            <div class="slider">
+                <input type="range" value="0" min="0" max="1" step="0.01" data-field="highMultiplierRed" />
                 <input type="text" value="0" data-field="highMultiplierRed" />
             </div>
-            <div class="sliderNew">
-                <input type="range" value="1" min="0" max="2" step="0.01" data-field="respMultiplierRed" />
+            <div class="slider">
+                <input type="range" value="1" min="0" max="1" step="0.01" data-field="respMultiplierRed" />
                 <input type="text" value="1" data-field="respMultiplierRed" />
             </div>
-            GREEN lo/hi/re
-            <div class="sliderNew">
-                <input type="range" value="0" min="0" max="2" step="0.01" data-field="lowMultiplierGreen" />
+            GREEN lo/hi/amp response
+            <div class="slider">
+                <input type="range" value="0" min="0" max="1" step="0.01" data-field="lowMultiplierGreen" />
                 <input type="text" value="0" data-field="lowMultiplierGreen" />
             </div>
-            <div class="sliderNew">
-                <input type="range" value="1" min="0" max="2" step="0.01" data-field="highMultiplierGreen" />
+            <div class="slider">
+                <input type="range" value="1" min="0" max="1" step="0.01" data-field="highMultiplierGreen" />
                 <input type="text" value="1" data-field="highMultiplierGreen" />
             </div>
-            <div class="sliderNew">
-                <input type="range" value="0" min="0" max="2" step="0.01" data-field="respMultiplierGreen" />
+            <div class="slider">
+                <input type="range" value="0" min="0" max="1" step="0.01" data-field="respMultiplierGreen" />
                 <input type="text" value="0" data-field="respMultiplierGreen" />
             </div>
-            BLUE lo/hi/re
-            <div class="sliderNew">
-                <input type="range" value="1" min="0" max="2" step="0.01" data-field="lowMultiplierBlue" />
+            BLUE lo/hi/amp response
+            <div class="slider">
+                <input type="range" value="1" min="0" max="1" step="0.01" data-field="lowMultiplierBlue" />
                 <input type="text" value="1" data-field="lowMultiplierBlue" />
             </div>
-            <div class="sliderNew">
-                <input type="range" value="0" min="0" max="2" step="0.01" data-field="highMultiplierBlue" />
+            <div class="slider">
+                <input type="range" value="0" min="0" max="1" step="0.01" data-field="highMultiplierBlue" />
                 <input type="text" value="0" data-field="highMultiplierBlue" />
             </div>
-            <div class="sliderNew">
-                <input type="range" value="0" min="0" max="2" step="0.01" data-field="respMultiplierBlue" />
+            <div class="slider">
+                <input type="range" value="0" min="0" max="1" step="0.01" data-field="respMultiplierBlue" />
                 <input type="text" value="0" data-field="respMultiplierBlue" />
             </div>
 
