--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <div class="slider">
                 <p>widthMultiplier</p>
-                <input id="widthMultiplier" type="range" min="0.1" max="40" value="1" step="0.01" data-field="widthMultiplier" />
+                <input id="widthMultiplier" type="range" min="0.01" max="40" value="1" step="0.01" data-field="widthMultiplier" />
                 <input type="text" value="1" data-field="widthMultiplier" />
             </div>
 
@@ -72,6 +72,20 @@
                 <input type="text" value="5" data-field="polygonSymmetry" />
             </div>
 
+
+            <div class="slider" id="insetSliderDiv">
+                <p>inset</p>
+                <input id="inset" type="range" value="0.755" min="-10" max="10" step="0.001" data-field="inset" />
+                <input type="text" value="0.755" data-field="inset" />
+            </div>
+
+            <div class="slider" id="initialRadiusSliderDiv">
+                <p>initial radius</p>
+                <input id="initialRadius" type="range" value="1" min="1" max="100" step="0.01" data-field="initialRadius" />
+                <input type="text" value="1" data-field="initialRadius" />
+            </div>
+
+
             <div class="slider" id="initialRotationSliderDiv">
                 <p>initial rotation</p>
                 <input id="initialRotation" type="range" value="0.01" min="0" max="1" step="0.001" data-field="initialRotation" />
@@ -80,8 +94,8 @@
 
             <div class="slider" id="rotationSpeedSliderDiv">
                 <p>rotation speed</p>
-                <input id="rotationSpeed" type="range" value="0.05" min="-10" max="10" step="0.001" data-field="rotationSpeed" />
-                <input type="text" value="0.05" data-field="rotationSpeed" />
+                <input id="rotationSpeed" type="range" value="0.2" min="-10" max="10" step="0.001" data-field="rotationSpeed" />
+                <input type="text" value="0.2" data-field="rotationSpeed" />
             </div>
             
             <p>_________RGB_________</p>
