--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
         <!-- <audio id="audio1" controls></audio> -->
         <audio id="audio1" src="Vanilla - origin.mp3" controls></audio>
 
-        <div class="sidebar"></div>
+        <div class="sidebar">
             <div class="resizer"></div>
-            <div class="header">
-            <h3>close menu [X]</h3>
-            </div>
-
+            <div class="header"><h3>close menu [X]</h3></div>
+            
             <div class ="sidebarCategory" id="sidebarCategory1"> sidebarMenuCategory1
                 <div class="sidebarInsideCategoryElements" id="sidebarInsideCategoryElements1">
                     <div class = "sidebarElement">
@@ -57,8 +55,8 @@
                         <div class="slider">
                             <p>amplification</p>
                             <span>
-                                <input id="amplification" type="range" min="0.1" max="40" value="2" step="0.01" data-field="amplification" />
-                                <input type="text" value="2" data-field="amplification" />
+                                <input id="amplification" type="range" min="0.1" max="40" value="4" step="0.01" data-field="amplification" />
+                                <input type="text" value="4" data-field="amplification" />
                             </span>
                         </div>
                     </div>
@@ -111,8 +109,8 @@
                         <div class="slider" id="initialRadiusSliderDiv">
                             <p>initial radius</p>
                             <span>
-                                <input id="initialRadius" type="range" value="1" min="1" max="100" step="0.01" data-field="initialRadius" />
-                                <input type="text" value="1" data-field="initialRadius" />
+                                <input id="initialRadius" type="range" value="0" min="-400" max="400" step="0.1" data-field="initialRadius" />
+                                <input type="text" value="0" data-field="initialRadius" />
                             </span>
                         </div>
                     </div>
@@ -260,6 +258,7 @@
                                 <input type="text" value="0" data-field="gradPosition1" />
                             </span>
                         </div>
+                    </div>
                     <div class = "sidebarElement"> 
                         <div class="slider" id="gradPosition2SliderDiv">
                             <p>Position 2</p>
