Sidebar and audio working but not flawless css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="sidebar">
             <div class="resizer"></div>
            
-            <div class ="sidebarCategory" id="sidebarCategory1"> sidebarMenuCategory1
+            <div class ="sidebarCategory" id="sidebarCategory1"> GENERAL
                 <div class="sidebarInsideCategoryElements" id="sidebarInsideCategoryElements1">
                     <div class = "sidebarElement">
                         <input type = "file" id="fileupload" accept="audio/*"></input>
@@ -133,7 +133,7 @@
                         <div class="slider" id="rotationSpeedSliderDiv">
                             <p>rotation speed</p>
                             <span>
-                                <input id="rotationSpeed" type="range" value="0.2" min="-10" max="10" step="0.001" data-field="rotationSpeed" />
+                                <input id="rotationSpeed" type="range" value="0.2" min="-5" max="5" step="0.001" data-field="rotationSpeed" />
                                 <input type="text" value="0.2" data-field="rotationSpeed" />
                             </span>
                         </div>
@@ -141,7 +141,7 @@
                 </div>
             </div>
 
-            <div class ="sidebarCategory" id="sidebarCategory2"> sidebarMenuCategory2
+            <div class ="sidebarCategory" id="sidebarCategory2"> RGB
                 <div class="sidebarInsideCategoryElements" id="sidebarInsideCategoryElements2">
                     <div class = "sidebarElement"> 
                         alpha
@@ -152,6 +152,7 @@
                             </span>
                         </div>
                     </div>
+                        RED lo/hi/amp response
                     <div class = "sidebarElement"> 
                         <div class="slider">
                             <span>
@@ -230,7 +231,7 @@
                 </div>
             </div>
 
-            <div class ="sidebarCategory" id="sidebarCategory3"> sidebarMenuCategory3
+            <div class ="sidebarCategory" id="sidebarCategory3"> BACKGROUND
                 <div class="sidebarInsideCategoryElements" id="sidebarInsideCategoryElements3">
                     <div class = "sidebarElement"> 
                         <label for="backgrounds">Gradient type:</label>
@@ -277,7 +278,7 @@
                 </div>
             </div>
 
-            <div class ="sidebarCategory" id="sidebarCategory4"> sidebarMenuCategory4 shadow
+            <div class ="sidebarCategory" id="sidebarCategory4"> SHADOW
                 <div class="sidebarInsideCategoryElements" id="sidebarInsideCategoryElements4">
                     <div class = "sidebarElement"> 
                         <b>Shadow's color:</b>
