Resizing window works better

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </div>
         <div id="hideMenuButton" class="showHideButton fa-solid fa-angles-left">
         </div>
-        <div class="sidebar">
-            <div class="resizer"></div>
-           
+        <div class="sidebar">     
+            <div class="resizer"> 
+            </div>
             <div class ="sidebarCategory" id="sidebarCategory1"> GENERAL
                 <div class="sidebarInsideCategoryElements" id="sidebarInsideCategoryElements1">
                     <div class = "sidebarElement">
